# PD_QuestoesLeetCode

./: README.md  pyproject.toml
problems/: leetcode_1402.py  leetcode_879.py
