[tool.poetry]
name = "problems"
version = "0.1.0"
description = "Solução de Questões do LeetCode"
authors = ["Guilherme Marques <marquesguilherme3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
